--- a/Calculo IMC/Base.lproj/LaunchScreen.storyboard
+++ b/Calculo IMC/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Wah-eZ-xTb">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Wah-eZ-xTb">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.32399722933769226" green="0.67605286836624146" blue="0.7960972785949707" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="Wah-eZ-xTb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0tR-Yh-Eqz"/>
+                            <constraint firstItem="Wah-eZ-xTb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8Hd-pn-BL6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Wah-eZ-xTb" secondAttribute="trailing" id="8lV-mZ-m6X"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Wah-eZ-xTb" secondAttribute="bottom" id="nWe-Ou-T8w"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
