12. Testando o aplicativo no simulador

--- a/Calculo IMC/Base.lproj/Main.storyboard
+++ b/Calculo IMC/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                 <rect key="frame" x="238.66666666666663" y="170" width="77" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v55-7d-Q95">
                                 <rect key="frame" x="98.666666666666686" y="214" width="217" height="44"/>
@@ -58,6 +58,11 @@
                                 <state key="normal" title="Calcular">
                                     <color key="titleColor" red="0.32549019610000002" green="0.67450980390000004" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="calculate:" destination="Nro-RB-hzg" eventType="touchUpInside" id="oH2-Yj-Bvv"/>
                                 </connections>
@@ -96,9 +101,12 @@
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ex.: 75" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wFu-DO-reu">
                                 <rect key="frame" x="98.666666666666686" y="170" width="77" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="W6w-P5-pdF"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.31764705882352939" green="0.69411764705882351" blue="0.75294117647058822" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -110,6 +118,7 @@
                             <constraint firstItem="GQj-3S-WxQ" firstAttribute="trailing" secondItem="jXd-dj-Elr" secondAttribute="trailing" id="CBu-QG-gJR"/>
                             <constraint firstItem="KIi-Bb-sWE" firstAttribute="width" secondItem="hL1-hZ-job" secondAttribute="width" id="DL5-4Z-53k"/>
                             <constraint firstItem="KIi-Bb-sWE" firstAttribute="centerX" secondItem="hL1-hZ-job" secondAttribute="centerX" id="KaN-vc-coH"/>
+                            <constraint firstItem="KIi-Bb-sWE" firstAttribute="height" secondItem="wFu-DO-reu" secondAttribute="height" id="Lnh-Ya-CRi"/>
                             <constraint firstItem="hL1-hZ-job" firstAttribute="width" secondItem="uOA-Uk-kJg" secondAttribute="width" id="M89-aD-tTi"/>
                             <constraint firstItem="QOY-kz-eIR" firstAttribute="top" secondItem="jXd-dj-Elr" secondAttribute="top" constant="20" id="NaE-Kr-6jr"/>
                             <constraint firstItem="uOA-Uk-kJg" firstAttribute="top" secondItem="onB-8g-xwK" secondAttribute="bottom" constant="20" id="QFD-cd-hV6"/>
