--- a/Calculo IMC/Base.lproj/LaunchScreen.storyboard
+++ b/Calculo IMC/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Wah-eZ-xTb">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.32399722933769226" green="0.67605286836624146" blue="0.7960972785949707" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -27,7 +27,11 @@
                             <constraint firstItem="Wah-eZ-xTb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0tR-Yh-Eqz"/>
                             <constraint firstItem="Wah-eZ-xTb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8Hd-pn-BL6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Wah-eZ-xTb" secondAttribute="trailing" id="8lV-mZ-m6X"/>
+                            <constraint firstItem="Wah-eZ-xTb" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Fnk-R0-5rg"/>
+                            <constraint firstItem="Wah-eZ-xTb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Hs4-Bu-ulI"/>
+                            <constraint firstItem="Wah-eZ-xTb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="fQR-lE-kyP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Wah-eZ-xTb" secondAttribute="bottom" id="nWe-Ou-T8w"/>
+                            <constraint firstItem="Wah-eZ-xTb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rnI-9h-8cJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -38,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreen" width="320" height="568"/>
+        <image name="LaunchScreen" width="414" height="736"/>
     </resources>
 </document>
